fix withRecursive cte reference bug